# form2chatbot

./: .gitignore  browser.py  chat_tui.py  chatbot.py  db.json  extractor.py  extractor_tui.py  formFill.py  form_agent.py  launcher.py  main.py  pyproject.toml  test.json
